@@ -5,7 +5,8 @@ Changelog
 2.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Harmonize column lengths of groupid and userid columns.
+  [phgross]
 
 
 2.0.0 (2014-10-24)
